<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bbschool.bbremotemobile.TouchpadFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|start"
    android:orientation="vertical"
    android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/key_left_click"
                android:id="@+id/touchpad_left_click"
                android:layout_gravity="bottom|start"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/key_right_click"
                android:id="@+id/touchpad_right_click"
                android:layout_gravity="bottom|end"/>

        </LinearLayout>

</LinearLayout>
