<resources>
    <string name="app_name">BB Remote</string>

    <!-- Strings related to menu actions -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_input">InputActivity</string>
    <string name="menu_input_modes">Input Modes</string>
    <string name="action_keyboard">Keyboard</string>
    <string name="action_touchpad">Touchpad Mouse</string>
    <string name="action_optical">Optical Mouse</string>
    <string name="action_camera">Camera</string>
    <string name="action_mic">Microphone</string>
    <string name="action_gamepad">Game Controller</string>
    <string name="action_customize">Customize Controller</string>
    <string name="menu_dual_mode">Secondary Input Mode</string>
    <string name="action_dual_mic">Background Mic</string>
    <string name="action_dual_camera">Background Camera</string>
    <string name="action_dual_none">None</string>
    <string name="action_connection">Connection</string>
    <string name="action_scan">Scan</string>
    <string name="action_add_input">Add Input</string>
    <string name="action_save_layout">Save Layout</string>
    <string name="action_load_layout">Load Layout</string>
    <string name="action_delete_layout">Delete Layout</string>
    <string name="action_delete_input">Delete Input</string>
    <string name="action_cancel_delete">Cancel</string>
    <string name="customize_menu">Customize</string>
    <string name="title_activity_customize_gamepad">CustomizeGamepadActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_customize_orientation">Orientation</string>
    <string name="action_portrait">Portrait</string>
    <string name="action_landscape">Landscape</string>
    <string name="menu_customize_rotate">Rotate as Input</string>
    <string name="action_rotate_enabled">Enabled</string>
    <string name="action_rotate_disabled">Disabled</string>

    <!-- Strings related to keyboard key labels -->
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_a">a</string>
    <string name="key_b">b</string>
    <string name="key_c">c</string>
    <string name="key_d">d</string>
    <string name="key_e">e</string>
    <string name="key_f">f</string>
    <string name="key_g">g</string>
    <string name="key_h">h</string>
    <string name="key_i">i</string>
    <string name="key_j">j</string>
    <string name="key_k">k</string>
    <string name="key_l">l</string>
    <string name="key_m">m</string>
    <string name="key_n">n</string>
    <string name="key_o">o</string>
    <string name="key_p">p</string>
    <string name="key_q">q</string>
    <string name="key_r">r</string>
    <string name="key_s">s</string>
    <string name="key_t">t</string>
    <string name="key_u">u</string>
    <string name="key_v">v</string>
    <string name="key_w">w</string>
    <string name="key_x">x</string>
    <string name="key_y">y</string>
    <string name="key_z">z</string>
    <string name="key_ctrl">Ctrl</string>
    <string name="key_alt">Alt</string>
    <string name="key_del">Del</string>
    <string name="key_win">Win</string>
    <string name="key_tab">Tab</string>
    <string name="key_esc">Esc</string>
    <string name="key_print_screen">PrtSc</string>
    <string name="key_scroll_lock">ScrL</string>
    <string name="key_pause">Brk</string>
    <string name="key_insert">INS</string>
    <string name="key_home">Home</string>
    <string name="key_end">End</string>
    <string name="key_page_up">PgUp</string>
    <string name="key_page_down">PgDn</string>
    <string name="key_f1">F1</string>
    <string name="key_f2">F2</string>
    <string name="key_f3">F3</string>
    <string name="key_f4">F4</string>
    <string name="key_f5">F5</string>
    <string name="key_f6">F6</string>
    <string name="key_f7">F7</string>
    <string name="key_f8">F8</string>
    <string name="key_f9">F9</string>
    <string name="key_f10">F10</string>
    <string name="key_f11">F11</string>
    <string name="key_f12">F12</string>
    <string name="key_exclamation">!</string>
    <string name="key_at">\@</string>
    <string name="key_number">#</string>
    <string name="key_dollar">$</string>
    <string name="key_forward_slash">/</string>
    <string name="key_exponent">^</string>
    <string name="key_and">&amp;</string>
    <string name="key_times">*</string>
    <string name="key_left_parentheses">(</string>
    <string name="key_right_parentheses">)</string>
    <string name="key_dash">-</string>
    <string name="key_apostrophe">\'</string>
    <string name="key_quote">\"</string>
    <string name="key_colon">:</string>
    <string name="key_semicolon">;</string>
    <string name="key_comma">,</string>
    <string name="key_question">\?</string>
    <string name="key_period">.</string>
    <string name="key_plus">+</string>
    <string name="key_equal">=</string>
    <string name="key_less_than">&lt;</string>
    <string name="key_greater_than">&gt;</string>
    <string name="key_left_brace">{</string>
    <string name="key_right_brace">}</string>
    <string name="key_left_bracket">[</string>
    <string name="key_right_bracket">]</string>
    <string name="key_percent">%</string>
    <string name="key_tilda">~</string>
    <string name="key_grave">`</string>
    <string name="key_underscore">_</string>
    <string name="key_back_slash">\\</string>
    <string name="key_vertical_line">|</string>
    <string name="key_mode_1">1/3</string>
    <string name="key_mode_2">2/3</string>
    <string name="key_mode_3">3/3</string>
    <string name="key_caps">Caps</string>
    <string name="key_left_click">L</string>
    <string name="key_right_click">R</string>
    <string name="key_middle_click">M</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_touchpad_sensitivity">Touchpad Sensitivity</string>

    <string name="pref_optical_sensitivity">Optical Sensitivity</string>

    <string name="pref_gamepad_sensitivity">Gamepad Axis Sensitivity</string>

    <string name="pref_title_default_mouse_mode">Default Mouse Mode</string>
    <string-array name="pref_default_mouse_mode">
        <item>Touchpad</item>
        <item>Optical</item>
        <item>None</item>
    </string-array>
    <string-array name="pref_default_mouse_mode_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_default_gamepad">Default Gamepad Layout</string>
</resources>
