<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/customize_gamepad_fragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bbschool.bbremotemobile.CustomizeGamepadActivity"
    tools:showIn="@layout/activity_customize_gamepad">

</RelativeLayout>
