<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bbschool.bbremotemobile.ConnectionFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Paired Devices"
        android:textStyle="bold"
        android:textSize="22sp"/>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/pairedDeviceList"
        android:layout_weight="1"
        android:background="#0f0"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Unpaired Devices"
        android:textStyle="bold"
        android:textSize="22sp"/>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/unpairedDeviceList"
        android:layout_weight="1"
        android:background="#f00"/>

</LinearLayout>
